# oc_search

./: .gitignore  Dockerfile  README.md  conf.json  docker_version.txt  gunicorn.conf.py  pyproject.toml  search_oc.py
.github/workflows/: codeql.yml  docker-build.yml
html-template/: search.html
static/css/: custom.css  oc-table.css  search.css
static/js/: search-conf-index-v2.js  search.js
static/oscar/: search-conf-index-v2.js  search.js
