[project]
name = "oc-search"
version = "1.6.2"
description = "Search service for OpenCitations, allowing users to search and query OpenCitations datasets through a web interface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.1",
    "astroid>=4.0.4",
    "autopep8>=2.3.2",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.6",
    "flake8>=7.3.0",
    "gevent>=25.9.1",
    "gitpython>=3.1.46",
    "gunicorn>=22.0.0",
    "idna>=3.11",
    "isodate>=0.7.2",
    "isort>=8.0.1",
    "jedi>=0.17.2",
    "lazy-object-proxy>=1.12.0",
    "lxml>=6.0.2",
    "mccabe>=0.7.0",
    "mypy>=1.19.1",
    "mypy-extensions>=1.1.0",
    "pycodestyle>=2.14.0",
    "pydocstyle>=6.3.0",
    "pyflakes>=3.4.0",
    "pylint>=4.0.5",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "python-jsonrpc-server>=0.4.0",
    "python-language-server>=0.36.2",
    "python-lsp-jsonrpc>=1.1.2",
    "python-lsp-server>=1.14.0",
    "pytz>=2026.1.post1",
    "rdflib>=7.6.0",
    "rdflib-jsonld>=0.6.2",
    "requests>=2.32.5",
    "rope>=1.14.0",
    "six>=1.17.0",
    "snowballstemmer>=3.0.1",
    "sparqlwrapper>=2.0.0",
    "toml>=0.10.2",
    "typing-extensions>=4.15.0",
    "ujson>=5.12.0",
    "urllib3>=2.6.3",
    "web-py>=0.62",
    "wrapt>=2.1.2",
    "yapf>=0.43.0",
    "zope-event>=6.1",
]
